Fixed scrollbar on non-fullscreen video

--- a/LoLMatchups/StyleSheet.css
+++ b/LoLMatchups/StyleSheet.css
@@ -461,7 +461,7 @@ body {
     margin-top: -130px;
     width: 100%;
     height: 930px;
-    overflow-x: visible;
+    overflow-x: hidden;
     overflow-y: hidden;
     border-bottom: 6px solid #222;
     background: #000;
